# test_web_api

./: .gitignore  README.md
api/: .pre-commit-config.yaml  pyproject.toml  requirements.txt  ruff.toml
api/amtl_api/adapters/api/: __init__.py  api_exceptions.py  api_tools.py  app.py  check_user.py  config.py  exceptions.py  lifespan.py  models.py  settings.py
api/amtl_api/adapters/api/middlewares/: check_session.py
api/amtl_api/adapters/api/routes/: api_routes.py  html_routes.py
api/amtl_api/adapters/api/templates/: 40x.tpl
api/amtl_api/adapters/db/: __init__.py  pg_db.py  settings.py
api/amtl_api/adapters/db/alembic/: env.py
api/amtl_api/adapters/db/alembic/migrations/: 1111_db_init_create_schema.py  2025_06_29_07_08_23_first_tables.py  2025_07_03_17_08_00_pass.py
api/amtl_api/adapters/db/tables/: __init__.py
api/amtl_api/adapters/db/tables/models/: common.py  data.py  geo_types.py  mixins.py  schemas.py
api/amtl_api/adapters/db/tables/repository/: base.py  site_config.py  site_map.py
api/amtl_api/adapters/exchange1C/: excange.py  old_xml_parser.py  repository.py  tools.py
api/amtl_api/adapters/geo_ip/: geoip.py  get_city.py
api/amtl_api/adapters/kv_storage/: kv_pool.py  settings.py
api/amtl_api/adapters/kv_storage/repository/: site_session.py
api/amtl_api/adapters/shared/: __init__.py  tools.py
api/amtl_api/app/api/entities/: __init__.py  base.py
api/amtl_api/app/api/interfaces/: session_interfase.py  site_api.py
api/amtl_api/app/api/services/: search.py  site_api.py
api/amtl_api/run/: alembic_cli.py  api.py
(+3 files in other folders)
